test/types/records/split-init/error-never-initialized-values-global3.chpl
class C { }

var cc: C;
